change setup to run on windows

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,16 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "dev": "PORT=3001 nest start --watch",
-    "start": "PORT=3001 node dist/main",
+    "dev": "nest start --watch",
+    "start": "node dist/main",
     "lint": "eslint --ext ts,js",
-    "migration:create": "./bin/run-ts-node src/database/migrator.ts create",
-    "migration:down": "./bin/run-ts-node src/database/migrator.ts down",
-    "migration:up": "./bin/run-ts-node src/database/migrator.ts up",
-    "seeds:up": "./bin/run-ts-node src/database/seeder.ts",
-    "seeds:fresh": "./bin/run-ts-node src/database/seeder.ts --truncate",
+    "migration:create": "ts-node src/database/migrator.ts create",
+    "migration:down": "ts-node src/database/migrator.ts down",
+    "migration:up": "ts-node src/database/migrator.ts up",
+    "seeds:up": "ts-node src/database/seeder.ts",
+    "seeds:fresh": "ts-node src/database/seeder.ts --truncate",
     "prettier:check": "prettier --check '**/*.{json,md,yml,yaml,html,css}' --ignore-path .gitignore",
-    "run-ts-node": "./bin/run-ts-node",
+    "run-ts-node": "ts-node",
     "test": "jest",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
