--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production && next build",
     "build:styles": "tailwind build src/assets/css/tailwind.css -o public/css/styles.min.css",
-    "dev": "sh -c ./bin/dev-start.sh",
+    "dev": "yarn run dev:server",
     "dev:server": "npx next dev -p ${PORT:-3000}",
     "prettier:check": "prettier --check '**/**/*.{json,md,yml,yaml,css,ts,tsx,js,jsx}'",
     "start": "cross-env NODE_ENV=production node server.js",
